优化: 组件数据管理优化:考勤表 新闻 屏保 天气 倒计时 课程表 值日表 生日提醒